# dbt-lineage-trace-library

./: .gitignore  COMPARISON.md  benchmark.py  build_full_cache.py  debug_5models.py  fetch_dbt_artifacts.py  query_cache.py  search_catalog.py
dbt-column-lineage/: LICENSE  README.md  pyproject.toml
dbt-column-lineage/src/dbt_lineage/: __init__.py  api.py  cli.py  dialect.py  exceptions.py  graph.py  models.py  parser.py  sql_analyzer.py  storage.py
dbt-column-lineage/tests/: conftest.py  test_api.py  test_cli.py  test_dialect.py  test_graph.py  test_improvements.py  test_models.py  test_parser.py  test_sql_analyzer.py
dbt-column-lineage/tests/fixtures/: simple_catalog.json  simple_manifest.json
dbt-column-lineage/tests/fixtures/sql_samples/: aggregation.sql  case_when.sql  cte.sql  multi_join.sql  nested_subquery.sql  passthrough.sql  rename.sql  select_star.sql  window_function.sql
demo/: run_demo.py  trace_column.py  trace_petpay.py  visualize.py
