[project]
name = "dbt-column-lineage"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=26.0.0",
    "networkx>=3.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
dbt-lineage = "dbt_lineage.cli:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
